// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tabSide renders 0 1`] = `
Array [
  .c0 {
  tab-side: 0;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: 0;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: 0;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSide renders function 1`] = `
Array [
  .c0 {
  tab-side: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: has;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: has;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSide renders invalid theme path 1`] = `
Array [
  .c0 {
  tab-side: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSide renders negative number 1`] = `
Array [
  .c0 {
  tab-side: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSide renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  tab-side: July;
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-side: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  tab-side: July;
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-side: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  tab-side: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    tab-side: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-side: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    tab-side: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-side: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`tabSide renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    tab-side: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-side: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    tab-side: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-side: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    tab-side: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-side: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    tab-side: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-side: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-side: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`tabSide renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  tab-side: July;
}

@media May {
  .c0 {
    tab-side: August;
  }
}

@media April {
  .c0 {
    tab-side: September;
  }
}

@media January {
  .c0 {
    tab-side: November;
  }
}

@media April {
  .c0 {
    tab-side: August;
  }
}

@media June {
  .c0 {
    tab-side: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  tab-side: July;
}

@media May {
  .c0 {
    tab-side: August;
  }
}

@media April {
  .c0 {
    tab-side: September;
  }
}

@media January {
  .c0 {
    tab-side: November;
  }
}

@media April {
  .c0 {
    tab-side: August;
  }
}

@media June {
  .c0 {
    tab-side: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  tab-side: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    tab-side: November;
  }
}

@media April {
  .c0 {
    tab-side: January;
  }
}

@media January {
  .c0 {
    tab-side: December;
  }
}

@media April {
  .c0 {
    tab-side: April;
  }
}

@media June {
  .c0 {
    tab-side: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    tab-side: November;
  }
}

@media April {
  .c0 {
    tab-side: January;
  }
}

@media January {
  .c0 {
    tab-side: December;
  }
}

@media April {
  .c0 {
    tab-side: April;
  }
}

@media June {
  .c0 {
    tab-side: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`tabSide renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    tab-side: July;
  }
}

@media April {
  .c0 {
    tab-side: August;
  }
}

@media January {
  .c0 {
    tab-side: September;
  }
}

@media April {
  .c0 {
    tab-side: November;
  }
}

@media June {
  .c0 {
    tab-side: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    tab-side: July;
  }
}

@media April {
  .c0 {
    tab-side: August;
  }
}

@media January {
  .c0 {
    tab-side: September;
  }
}

@media April {
  .c0 {
    tab-side: November;
  }
}

@media June {
  .c0 {
    tab-side: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    tab-side: January;
  }
}

@media April {
  .c0 {
    tab-side: December;
  }
}

@media January {
  .c0 {
    tab-side: April;
  }
}

@media April {
  .c0 {
    tab-side: May;
  }
}

@media June {
  .c0 {
    tab-side: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    tab-side: January;
  }
}

@media April {
  .c0 {
    tab-side: December;
  }
}

@media January {
  .c0 {
    tab-side: April;
  }
}

@media April {
  .c0 {
    tab-side: May;
  }
}

@media June {
  .c0 {
    tab-side: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`tabSide renders postitive number 1`] = `
Array [
  .c0 {
  tab-side: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSide renders string 1`] = `
Array [
  .c0 {
  tab-side: July;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: July;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: June;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: June;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSide renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`tabSide renders valid theme path 1`] = `
Array [
  .c0 {
  tab-side: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  tab-side: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
